tests/sumo/errors/missing_first_param/errors.sumo.meso.gui
Error: The parameter 'stdout' is not allowed in this context.
 Switch or parameter name expected.
Error: Could not parse commandline options.
Quitting (on error).
